typescript/checker/tests/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block1.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            30,
        ),
        hi: BytePos(
            36,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block1.ts:3:5
  |
3 |     return;
  |     ^^^^^^

